drivers/card/K2616_Dll.h

int __stdcall K2616_AT88SC1608Read(HANDLE ComHandle, BYTE _Index, BYTE _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_AT88SC1608Write(HANDLE ComHandle, BYTE _Index, BYTE _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_AT88SC1608ReadFUSE(HANDLE ComHandle, BYTE * _FAB, BYTE * _CMA, BYTE * _PER);
int __stdcall K2616_AT88SC1608WriteFUSE(HANDLE ComHandle);
int __stdcall K2616_AT88SC1608InitAuth(HANDLE ComHandle, BYTE _DATA[8]);
int __stdcall K2616_AT88SC1608VerifyAuth(HANDLE ComHandle, BYTE _DATA[8]);
int __stdcall K2616_AT88SC1608WritePWD(HANDLE ComHandle, BYTE _PWType,BYTE _PWData[]);
//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_SLE4442Reset(HANDLE ComHandle);
int __stdcall K2616_SLE4442VerifyPWD(HANDLE ComHandle, BYTE _PWData[3]);
int __stdcall K2616_SLE4442Read(HANDLE ComHandle, BYTE _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_SLE4442ReadProtectBit(HANDLE ComHandle, BYTE _BlockData[32]);
int __stdcall K2616_SLE4442ReadSafety(HANDLE ComHandle, BYTE _BlockData[4]);
int __stdcall K2616_SLE4442Write(HANDLE ComHandle, BYTE _Address, BYTE _dataLen, BYTE _BlockData[]);
int __stdcall K2616_SLE4442WriteProtectBit(HANDLE ComHandle, BYTE _Address,BYTE _DataLen,BYTE _BlockData[32]);
int __stdcall K2616_SLE4442ChangePWD(HANDLE ComHandle, BYTE _PWData[3]);
//+++++++++++++++++++++++++++++++++++++++++++++++++++//
int __stdcall K2616_Sle4428Reset(HANDLE ComHandle);
int __stdcall K2616_Sle4428VerifyPWD(HANDLE ComHandle, BYTE _PWData[2]);
int __stdcall K2616_Sle4428Read(HANDLE ComHandle, int _Address, BYTE _dataLen, BYTE _BlockData[]);