apsp-client-sdk/src/test/java/com/zmcsoft/apsp/client/K2616_DllLibrary.java

	/**
	 * Original signature : <code>int K2616_AT88SC1608Read(HANDLE, BYTE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:160</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1608Read(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, byte, ByteBuffer)} and {@link #K2616_AT88SC1608Read(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1608Read(HANDLE ComHandle, byte _Index, byte _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC1608Read(HANDLE, BYTE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:160</i>
	 */
	int K2616_AT88SC1608Read(HANDLE ComHandle, byte _Index, byte _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC1608Write(HANDLE, BYTE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:161</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1608Write(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, byte, ByteBuffer)} and {@link #K2616_AT88SC1608Write(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1608Write(HANDLE ComHandle, byte _Index, byte _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC1608Write(HANDLE, BYTE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:161</i>
	 */
	int K2616_AT88SC1608Write(HANDLE ComHandle, byte _Index, byte _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_AT88SC1608ReadFUSE(HANDLE, BYTE*, BYTE*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:162</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1608ReadFUSE(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer, ByteBuffer, ByteBuffer)} and {@link #K2616_AT88SC1608ReadFUSE(k2616_dll.K2616_DllLibrary.HANDLE, Pointer, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1608ReadFUSE(HANDLE ComHandle, Pointer _FAB, Pointer _CMA, Pointer _PER);
	/**
	 * Original signature : <code>int K2616_AT88SC1608ReadFUSE(HANDLE, BYTE*, BYTE*, BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:162</i>
	 */
	int K2616_AT88SC1608ReadFUSE(HANDLE ComHandle, ByteBuffer _FAB, ByteBuffer _CMA, ByteBuffer _PER);
	/**
	 * Original signature : <code>int K2616_AT88SC1608WriteFUSE(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:163</i>
	 */
	int K2616_AT88SC1608WriteFUSE(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_AT88SC1608InitAuth(HANDLE, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:164</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1608InitAuth(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_AT88SC1608InitAuth(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1608InitAuth(HANDLE ComHandle, Pointer _DATA);
	/**
	 * Original signature : <code>int K2616_AT88SC1608InitAuth(HANDLE, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:164</i>
	 */
	int K2616_AT88SC1608InitAuth(HANDLE ComHandle, ByteBuffer _DATA);
	/**
	 * Original signature : <code>int K2616_AT88SC1608VerifyAuth(HANDLE, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:165</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1608VerifyAuth(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_AT88SC1608VerifyAuth(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1608VerifyAuth(HANDLE ComHandle, Pointer _DATA);
	/**
	 * Original signature : <code>int K2616_AT88SC1608VerifyAuth(HANDLE, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:165</i>
	 */
	int K2616_AT88SC1608VerifyAuth(HANDLE ComHandle, ByteBuffer _DATA);
	/**
	 * Original signature : <code>int K2616_AT88SC1608WritePWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:166</i><br>
	 * @deprecated use the safer methods {@link #K2616_AT88SC1608WritePWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_AT88SC1608WritePWD(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_AT88SC1608WritePWD(HANDLE ComHandle, byte _PWType, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_AT88SC1608WritePWD(HANDLE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:166</i>
	 */
	int K2616_AT88SC1608WritePWD(HANDLE ComHandle, byte _PWType, ByteBuffer _PWData);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_SLE4442Reset(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:168</i>
	 */
	int K2616_SLE4442Reset(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_SLE4442VerifyPWD(HANDLE, BYTE[3])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:169</i><br>
	 * @deprecated use the safer methods {@link #K2616_SLE4442VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_SLE4442VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_SLE4442VerifyPWD(HANDLE ComHandle, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_SLE4442VerifyPWD(HANDLE, BYTE[3])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:169</i>
	 */
	int K2616_SLE4442VerifyPWD(HANDLE ComHandle, ByteBuffer _PWData);
	/**
	 * Original signature : <code>int K2616_SLE4442Read(HANDLE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:170</i><br>
	 * @deprecated use the safer methods {@link #K2616_SLE4442Read(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, ByteBuffer)} and {@link #K2616_SLE4442Read(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_SLE4442Read(HANDLE ComHandle, byte _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442Read(HANDLE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:170</i>
	 */
	int K2616_SLE4442Read(HANDLE ComHandle, byte _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442ReadProtectBit(HANDLE, BYTE[32])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:171</i><br>
	 * @deprecated use the safer methods {@link #K2616_SLE4442ReadProtectBit(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_SLE4442ReadProtectBit(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_SLE4442ReadProtectBit(HANDLE ComHandle, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442ReadProtectBit(HANDLE, BYTE[32])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:171</i>
	 */
	int K2616_SLE4442ReadProtectBit(HANDLE ComHandle, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442ReadSafety(HANDLE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:172</i><br>
	 * @deprecated use the safer methods {@link #K2616_SLE4442ReadSafety(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_SLE4442ReadSafety(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_SLE4442ReadSafety(HANDLE ComHandle, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442ReadSafety(HANDLE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:172</i>
	 */
	int K2616_SLE4442ReadSafety(HANDLE ComHandle, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442Write(HANDLE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:173</i><br>
	 * @deprecated use the safer methods {@link #K2616_SLE4442Write(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, ByteBuffer)} and {@link #K2616_SLE4442Write(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_SLE4442Write(HANDLE ComHandle, byte _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442Write(HANDLE, BYTE, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:173</i>
	 */
	int K2616_SLE4442Write(HANDLE ComHandle, byte _Address, byte _dataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442WriteProtectBit(HANDLE, BYTE, BYTE, BYTE[32])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:174</i><br>
	 * @deprecated use the safer methods {@link #K2616_SLE4442WriteProtectBit(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, ByteBuffer)} and {@link #K2616_SLE4442WriteProtectBit(k2616_dll.K2616_DllLibrary.HANDLE, byte, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_SLE4442WriteProtectBit(HANDLE ComHandle, byte _Address, byte _DataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442WriteProtectBit(HANDLE, BYTE, BYTE, BYTE[32])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:174</i>
	 */
	int K2616_SLE4442WriteProtectBit(HANDLE ComHandle, byte _Address, byte _DataLen, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_SLE4442ChangePWD(HANDLE, BYTE[3])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:175</i><br>
	 * @deprecated use the safer methods {@link #K2616_SLE4442ChangePWD(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_SLE4442ChangePWD(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_SLE4442ChangePWD(HANDLE ComHandle, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_SLE4442ChangePWD(HANDLE, BYTE[3])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:175</i>
	 */
	int K2616_SLE4442ChangePWD(HANDLE ComHandle, ByteBuffer _PWData);
	/**
	 * +++++++++++++++++++++++++++++++++++++++++++++++++++//<br>
	 * Original signature : <code>int K2616_Sle4428Reset(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:177</i>
	 */
	int K2616_Sle4428Reset(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_Sle4428VerifyPWD(HANDLE, BYTE[2])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:178</i><br>
	 * @deprecated use the safer methods {@link #K2616_Sle4428VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_Sle4428VerifyPWD(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_Sle4428VerifyPWD(HANDLE ComHandle, Pointer _PWData);
	/**
	 * Original signature : <code>int K2616_Sle4428VerifyPWD(HANDLE, BYTE[2])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:178</i>
	 */
	int K2616_Sle4428VerifyPWD(HANDLE ComHandle, ByteBuffer _PWData);
	/**
	 * Original signature : <code>int K2616_Sle4428Read(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:179</i><br>
	 * @deprecated use the safer methods {@link #K2616_Sle4428Read(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, ByteBuffer)} and {@link #K2616_Sle4428Read(k2616_dll.K2616_DllLibrary.HANDLE, int, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_Sle4428Read(HANDLE ComHandle, int _Address, byte _dataLen, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_Sle4428Read(HANDLE, int, BYTE, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:179</i>
	 */
	int K2616_Sle4428Read(HANDLE ComHandle, int _Address, byte _dataLen, ByteBuffer _BlockData);
